[package]
name = "dou_dizhu"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Toolkit for the Chinese card game Dou Dizhu"
repository = "https://github.com/zhangheqi/dou_dizhu"
readme = "README.md"
keywords = ["cards", "poker", "game", "dou-dizhu"]
categories = ["game-development"]
