[package]
name = "dou_dizhu"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Rust toolkit for the Chinese card game Dou Dizhu (斗地主)"
repository = "https://github.com/zhangheqi/dou_dizhu"
readme = "README.md"
keywords = ["cards", "poker", "game", "dou-dizhu"]
categories = ["game-development"]

[dependencies]
itertools = "0.14"
